Fix alignment of show sidebar button

--- a/src/components/header/header.scss
+++ b/src/components/header/header.scss
@@ -27,7 +27,7 @@
 		padding: 0.7rem 0;
 		font-size: 0.75rem;
 		gap: 0.5rem;
-		width: 42rem;
+		flex-grow: 4;
 		cursor: pointer;
 		color: $gray;
 
